--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-<%= link_to "About Me", about_path%>
+<div class="container">
+  <h1>Crypto Naija Blog</h1>
+  <p>Every crypto related news and updates can be found here.</p>
+  <%= link_to "About Me", about_path%>
+</div>
